--- a/style.css
+++ b/style.css
@@ -60,13 +60,17 @@
   transform: rotateZ(180deg) scaleX(-1);
 }
 
-/* GENERYC STYLES */
+/* =========== GENERYC STYLES ========== */
 
 * {
   margin: 0;
   padding: 0;
   list-style: none;
   box-sizing: border-box;
+}
+
+img {
+  width: 100%;
 }
 
 h2,
@@ -86,12 +90,22 @@ input,
 textarea,
 label {
   font-family: "Libre Baskerville", serif;
+  font-size: 1.6rem;
+  line-height: 20px;
 }
 
 button {
   cursor: pointer;
   text-transform: uppercase;
   transition: background 1s;
+  font-family: var(--featured-font-family);
+  padding: 16px 32px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  margin-inline: 12rem;
 }
 
 /* =========== HEADER ================= */
@@ -136,8 +150,6 @@ header .container p {
 header .container button {
   color: var(--primary-color);
   background-color: transparent;
-  font-family: var(--featured-font-family);
-  padding: 16px 32px;
   font-size: 2rem;
   border: 3px solid var(--primary-color);
 }
@@ -147,7 +159,7 @@ header .container button:hover {
   color: var(--primary-color-contrast);
 }
 
-/* img inverted world */
+/* ========== IMG INVERTED WORLD ============= */
 .img-invert-world {
   width: 100%;
   max-width: 900px;
@@ -161,4 +173,206 @@ header .container button:hover {
 
   mask: var(--character-top-image-src) bottom / 100% no-repeat;
   -webkit-mask: var(--character-top-image-src) bottom / 100% no-repeat;
+}
+
+.container-img-invert-world {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.img-invert-world#bottom-img {
+  background-color: var(--character-bottom-image-color);
+  height: 500px;
+  transform: rotateZ(180deg) scaleX(-1);
+  position: relative;
+
+  mask: var(--character-bottom-image-src) top / contain no-repeat;
+  -webkit-mask: var(--character-bottom-image-src) bottom / 100% no-repeat;
+}
+
+/* ======== MAIN STYLES ========== */
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12rem;
+  position: relative;
+}
+
+main::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: var(--page-background) no-repeat, url(./assets/images/backgrounds/florest.png);
+  background-size: cover;
+  z-index: -1;
+}
+
+section.container {
+  justify-content: space-between;
+}
+/* ===== 1° SECTION (INVERTED WORLD) =========== */
+
+#inverted-world .content {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  width: 50%;
+}
+
+/* ===== 2° SECTION (TRAILLER) ================ */
+#trailer {
+  gap: 2.4rem;
+}
+
+#trailer .media {
+  background-color: var(--primary-color);
+}
+
+#trailer .media iframe {
+  position: relative;
+  bottom: 2.4rem;
+  left: 2.4rem;
+  border: 2px solid;
+  border-image: linear-gradient(var(--primary-color), var(--primary-color-contrast));
+  border-image-slice: 10;
+}
+
+
+#trailer .content {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  width: 50%;
+  text-align: right;
+}
+
+/* ====== 3° SECTION (GALLERY) ========== */
+#gallery-img {
+  flex-direction: column;
+  gap: 4rem;
+  justify-content: center;
+}
+
+#gallery-img .gallery-container {
+  display: flex;
+  width: 100%;
+  padding-left: 20px;
+  /* justify-content: space-between; */
+  /* padding-inline: 20px; */
+  /* padding-block: 20px; */
+  gap: 5rem;
+  position: relative;
+}
+
+#gallery-img .gallery-container .image-content {
+  width: 250px;
+  height: 250px;
+  outline: 20px solid var(--highlight-color);
+  border: 3px solid var(--primary-color);
+  box-sizing: initial;
+}
+
+#gallery-img .gallery-container .image-content img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 10px solid var(--highlight-color);
+}
+
+#gallery-img .gallery-container .background-image {
+  position: absolute;
+  width: 80%;
+  right: -52%;
+  top: -110%;
+  z-index: -1;
+}
+
+/* ====== 4° SECTION (FORM) ========= */
+#form.container {
+  flex-direction: column;
+  gap: 6rem;
+}
+
+#form .content.info {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  text-align: center;
+  align-items: center;
+}
+
+#form .content.info h2 {
+  max-width: 80rem;
+  width: 100%;
+}
+
+#form .content.form {
+  display: flex;
+  gap: 4rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#form .content.form h3 {
+  color: var(--highlight-color);
+  flex-basis: 30%;
+}
+
+#form .content.form h3 span {
+  color: var(--primary-color);
+}
+
+#form .content.form form {
+  display: flex;
+  flex-direction: column;
+  padding: 2.4rem;
+  background: var(--primary-color);
+  color: var(--primary-color-contrast);
+  width: 100%;
+  position: relative;
+}
+
+#form .content.form form::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: var(--highlight-color);
+  position: absolute;
+  z-index: -1;
+  top: 24px;
+  left: 24px;
+}
+
+#form .content.form form button {
+  align-self: center;
+  background: var(--highlight-color);
+  color: var(--primary-color-contrast);
+  font-size: 1.6rem;
+}
+
+#form .content.form form button:hover {
+  background: var(--primary-color-contrast);
+  color: var(--field-background-color);
+}
+
+#form .content.form form label {
+  margin-bottom: .8rem;
+}
+
+#form .content.form form input,
+#form .content.form form textarea {
+  margin-bottom: 2.4rem;
+  border: 2px solid var(--primary-color-contrast);
+  background: var(--field-background-color);
+  color: var(--primary-color-contrast);
+}
+
+#form .content.form form input:focus-visible,
+#form .content.form form textarea:focus-visible {
+  outline: none;
+  border-color: black;
 }
